Clean up functionality
