# packages/service-library/src/web-api/api-contracts/scan-result-response.ts
@@ -1,7 +1,6 @@
 // Copyright (c) Microsoft Corporation. All rights reserved.
 // Licensed under the MIT License.
 
-import { ScanNotificationErrorCodeName } from '../scan-notification-error-codes';
 import { ScanRunErrorCodeName } from '../scan-run-error-codes';
 import { WebApiError } from '../web-api-error-codes';
 import { ScanDefinitionType } from './scan-run-request';
@@ -18,9 +17,7 @@ export declare type RunState =
     | 'completed'
     | 'failed'
     | 'unscannable';
-export declare type NotificationState = 'pending' | 'queued' | 'queueFailed' | 'sending' | 'sent' | 'sendFailed';
-export declare type NotificationErrorTypes = 'InternalError' | 'HttpErrorCode';
-export declare type ScanType = 'accessibility' | 'privacy';
+export declare type ScanType = 'privacy';
 export declare type ScanResultResponse = ScanRunResultResponse | ScanRunErrorResponse;
 export declare type AuthenticationState = 'succeeded' | 'failed' | 'unauthenticated';
 
@@ -29,18 +26,8 @@ export const authenticationTypes = ['undetermined', 'entraId'] as const;
 export declare type AuthenticationType = (typeof authenticationTypes)[number];
 
 // Construct to support type guard
-export const browserValidationTypes = ['highContrastProperties'] as const;
-export declare type BrowserValidationTypes = (typeof browserValidationTypes)[number];
-export declare type ReportSource = 'accessibility-agent' | 'accessibility-scan' | 'accessibility-combined' | 'privacy-scan';
-export declare type ReportFormat =
-    | 'axe'
-    | 'sarif'
-    | 'html'
-    | 'consolidated.html'
-    | 'json'
-    | 'consolidated.json'
-    | 'page.mhtml'
-    | 'page.png';
+export declare type ReportSource = 'privacy-scan';
+export declare type ReportFormat = 'json' | 'consolidated.json' | 'page.mhtml' | 'page.png';
 
 /**
  * Defines REST API HTTP GET scan result contract
@@ -56,25 +43,11 @@ export interface ScanRunResultResponse {
     scanResult?: ScanResult;
     deepScanResult?: DeepScanResultItem[];
     reports?: ScanReport[];
-    notification?: ScanCompletedNotification;
-    browserValidationResult?: BrowserValidationResult;
 }
 
 export interface ScanRunErrorResponse {
     scanId: string;
     error: WebApiError;
-}
-
-export interface ScanCompletedNotification {
-    scanNotifyUrl: string;
-    state?: NotificationState;
-    error?: NotificationError;
-    responseCode?: number;
-}
-
-export interface NotificationError {
-    code: ScanNotificationErrorCodeName;
-    message: string;
 }
 
 export interface ScanResult {
@@ -126,8 +99,4 @@ export interface DeepScanResultItem {
 export interface AuthenticationResult {
     detected: AuthenticationType;
     state: AuthenticationState;
-}
-
-export interface BrowserValidationResult {
-    highContrastProperties?: ScanState;
 }
