# packages/storage-documents/src/on-demand-notification-request-message.ts
@@ -1,12 +1,0 @@
-// Copyright (c) Microsoft Corporation. All rights reserved.
-// Licensed under the MIT License.
-
-import { OnDemandPageScanRunState, ScanState } from './on-demand-page-scan-result';
-
-export interface OnDemandNotificationRequestMessage {
-    scanId: string;
-    scanNotifyUrl: string;
-    runStatus: OnDemandPageScanRunState;
-    scanStatus: ScanState;
-    deepScanId?: string;
-}
